[ct] Fix missing template literal tag, fix some style (missing color classes, white background to far right)

--- a/ct/modules/style.scss
+++ b/ct/modules/style.scss
@@ -66,6 +66,17 @@ table.inner-table {
     }
 }
 
+.error {
+  color: var(--red-500);
+}
+
+.darkmode .error {
+    color: var(--red-300);
+}
+
+.green {
+  color: var(--green-400);
+}
 /* The table used for task triggering form layouts. */
 table.options {
     padding-left: 2em;
